mexc working, coincap need service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,145 @@
+
+package trader.arbitrage.service; import com.fasterxml.jackson.databind.JsonNode; import com.fasterxml.jackson.databind.ObjectMapper; import jakarta.annotation.PostConstruct; import lombok.RequiredArgsConstructor; import lombok.extern.slf4j.Slf4j; import org.springframework.beans.factory.ann
+
+pasted
+
+package trader.arbitrage.config; import lombok.extern.slf4j.Slf4j; import org.springframework.beans.factory.annotation.Value; import org.springframework.context.annotation.Bean; import org.springframework.context.annotation.Configuration; import org.springframework.http.client.reactive.ReactorClientHttpConnector; import org.springframework.web.reactive.function.client.WebClient; import reactor.netty.http.client.HttpClient; import java.time.Duration; @Configuration @Slf4j public class CoinWebClientConfiguration { @Bean public WebClient coinCapClient(@Value("${coincap.api.url}") String baseUrl, @Value("${coincap.api.key}") String apiKey ) { return WebClient.builder() .baseUrl(baseUrl) .defaultHeader("X-CMC_PRO_API_KEY", apiKey) .clientConnector(new ReactorClientHttpConnector( HttpClient.create() .responseTimeout(Duration.ofMillis(3000)) )) .build(); } }
+
+# Spring application settings spring.application.name=mexc-websocket-client # Server settings #server.port=8080 # Logging settings #logging.level.com.crypto.arbitrage=INFO logging.level.com.crypto.arbitrage=DEBUG # MEXC WebSocket settings mexc.wsUrl=wss://contract.mexc.com/edge mexc.tokens=BTC_USDT,ETH_USDT # CoinCap API settings coincap.api.url=https://pro-api.coinmarketcap.com coincap.api.key=f2ae9b07-9c80-43c0-8dc0-89e7e73f7ec1 coincap.api.update-interval=30000 # Arbitrage settings arbitrage.threshold=0.01 arbitrage.check-interval=10 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG logging.level.org.springframework.web.reactive.function.client.WebClient=DEBUG
+
+????? ??????????? ??????? ??? ???. ??????? ??? ???? . ???? ???? ??? ?? ??????. ? ??????? ??? ???
+
+Looking at your code, I've found some issues that need to be fixed. Let me analyze the code and provide corrections.
+
+Issues and Fixes
+Issue 1: Incorrect API Endpoint Path
+Your CoincapPriceService is using the CoinMarketCap API endpoint, but the service name suggests CoinCap. These are different services, and your implementation is actually for CoinMarketCap.
+
+Issue 2: Token Symbol Format and Handling
+The way you're extracting symbols and handling token pairs is inconsistent with CoinMarketCap's API requirements.
+
+Issue 3: Response Parsing
+The error handling in your JSON parsing needs improvement to better handle API responses.
+
+Issue 4: Security Concern
+Your API key is exposed in the application.properties file, which is not secure for production environments.
+
+Corrected Code
+
+Corrected CoinMarketCapPriceService.java
+Code
+Explanation
+Service Renaming: I've renamed the service from CoincapPriceService to CoinMarketCapPriceService to correctly reflect that you're using the CoinMarketCap API (based on the endpoint URL and API key header).
+Improved Error Handling: The error handling in the response parsing is now more robust, with better checks for the status code and error messages from the API.
+Better Logging: I've enhanced the logging throughout the service to provide more context about what's happening, especially during errors.
+Empty Stream Handling: Added a check in getPriceStream() to return an empty flux when a token isn't found, preventing potential null pointer exceptions.
+Configuration Security: Regarding your API key in application.properties - I'd recommend using environment variables or a secure vault for storing sensitive information instead of hardcoding it in configuration files.
+WebClient Configuration: Your CoinWebClientConfiguration looks good, with appropriate timeout settings.
+Additional Recommendations
+Consider Rate Limiting: CoinMarketCap API has rate limits. You might want to implement retries with backoff or adjust your polling interval accordingly.
+Error Recovery: Consider implementing a mechanism to recover if the API is temporarily unavailable.
+Token List Management: Consider making the token list configurable through your application properties rather than hardcoding it.
+Unit Tests: Add unit tests for your service, particularly focusing on error handling and response parsing.
+Is there any specific part of the code you'd like me to explain in more detail?
+
+Consider Rate Limiting: CoinMarketCap API has rate limits. You might want to implement retries with backoff or adjust your polling interval accordingly.
+
+???????? ???. ? ??????? ???? ?????
+package trader.arbitrage.config; import lombok.extern.slf4j.Slf4j; import org.springframework.beans.factory.annotation.Value; import org.springframework.context.annotation.Bean; import org.springframework.context.annotation.Configuration; import org.springframework.http.client.reactive.ReactorClientHttpConnector; import org.springframework.web.reactive.function.client.WebClient; import reactor.netty.http.client.HttpClient; import java.time.Duration; @Configuration @Slf4j public class CoinWebClientConfiguration { @Bean public WebClient coinCapClient(@Value("${coincap.api.url}") String baseUrl, @Value("${coincap.api.key}") String apiKey ) { return WebClient.builder() .baseUrl(baseUrl) .defaultHeader("X-CMC_PRO_API_KEY", apiKey) .clientConnector(new ReactorClientHttpConnector( HttpClient.create() .responseTimeout(Duration.ofMillis(3000)) )) .build(); } }
+
+I'll implement rate limiting with retries and backoff strategy for the CoinMarketCap API and also review your CoinWebClientConfiguration class.
+
+
+CoinMarketCapPriceService with Rate Limiting and Retries
+Code
+
+Improved CoinWebClientConfiguration
+Code
+
+Updated application.properties with Rate Limiting Configuration
+Code
+Improvements and Explanations
+1. Rate Limiting Implementation
+I've enhanced the CoinMarketCapPriceService with rate limiting features:
+
+API Call Counting: Tracks the number of API calls made within a minute
+Rate Limit Check: Before making API calls, checks if we've exceeded the configured limit
+Automatic Reset: Resets the counter after one minute passes
+Configurable Limits: Rate limits can be configured in application.properties
+2. Retry with Exponential Backoff
+The service now includes a retry mechanism with exponential backoff:
+
+Smart Retries: Only retries on specific error codes (429 Too Many Requests, 5xx Server Errors)
+Exponential Backoff: Each retry waits longer than the previous one
+Maximum Attempts: Configurable maximum number of retry attempts
+Maximum Backoff: Configurable maximum wait time between retries
+Detailed Logging: Logs each retry attempt for monitoring
+3. Improved WebClient Configuration
+I've enhanced the CoinWebClientConfiguration with several improvements:
+
+Connection Pooling: Added connection pooling to efficiently manage connections
+Configurable Timeouts: Both connection and read timeouts are now configurable
+Memory Limit: Increased buffer size for handling larger API responses
+Request/Response Logging: Added logging filters to monitor API interactions
+Security: API key is masked in logs to prevent accidental exposure
+Media Type Headers: Added proper Content-Type and Accept headers
+4. Updated Application Properties
+The application properties now include all necessary configuration parameters:
+
+Environment Variables: Added support for API key via environment variable
+Rate Limiting Settings: Configuration for the rate limiting mechanism
+Connection Settings: Configuration for connection management
+Memory Settings: Configuration for response buffer size
+Best Practices Implemented
+Security: API key is now configurable via environment variables
+Resource Management: Added connection pooling to prevent connection exhaustion
+Resilience: Added retry mechanism with backoff for transient failures
+Rate Control: Implemented rate limiting to respect API constraints
+Monitoring: Added detailed logging for troubleshooting
+Performance: Optimized connection management and buffer sizes
+Configurability: Made all important parameters configurable
+These changes will make your application more robust when dealing with the CoinMarketCap API, especially under heavy load or when facing transient network issues.
+
+
+
+
+
+
+# Spring application settings
+spring.application.name=mexc-websocket-client
+
 # Server settings
-server.port=8080
+#server.port=8080
 
 # Logging settings
 #logging.level.com.crypto.arbitrage=INFO
- logging.level.com.crypto.arbitrage=DEBUG
+logging.level.com.crypto.arbitrage=DEBUG
 
 # MEXC WebSocket settings
-mexc.websocket.url=wss://contract.mexc.com/edge
-mexc.websocket.ping-interval=15
-mexc.websocket.subscription-type=ticker
+mexc.wsUrl=wss://contract.mexc.com/edge
+mexc.tokens=BTC_USDT,ETH_USDT
 
-# CoinCap API settings
-coincap.api.url=https://pro-api.coinmarketcap.com/v2/cryptocurrency/quotes/latest
-coincap.api.key=f2ae9b07-9c80-43c0-8dc0-89e7e73f7ec1
+# CoinMarketCap API settings
+coincap.api.url=https://pro-api.coinmarketcap.com
+# Consider using environment variables instead of hardcoding the API key
+coincap.api.key=${COINMARKETCAP_API_KEY:f2ae9b07-9c80-43c0-8dc0-89e7e73f7ec1}
 coincap.api.update-interval=30000
+
+# CoinMarketCap API Rate Limiting settings
+coincap.api.max-attempts=3
+coincap.api.initial-backoff=1000
+coincap.api.max-backoff=10000
+coincap.api.calls-per-minute=25
+
+# CoinMarketCap API Connection settings
+coincap.api.connection.timeout=3000
+coincap.api.read.timeout=5000
+coincap.api.max.memory.size=16777216
 
 # Arbitrage settings
 arbitrage.threshold=0.01
 arbitrage.check-interval=10
+
+# Debug settings for WebClient
+logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG
+logging.level.org.springframework.web.reactive.function.client.WebClient=DEBUG
