--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.application.name=mexc-websocket-client
 #server.port=8080
 
 # Logging settings
-#logging.level.trader.arbitrage=INFO
-logging.level.trader.arbitrage=DEBUG
+logging.level.trader.arbitrage=INFO
+#logging.level.trader.arbitrage=DEBUG
 
 # MEXC WebSocket settings
 mexc.wsUrl=wss://contract.mexc.com/edge
@@ -30,8 +30,11 @@ coincap.api.read.timeout=5000
 coincap.api.max.memory.size=16777216
 
 # Arbitrage settings
-arbitrage.threshold=0.01
+arbitrage.threshold=0.1
 arbitrage.check-interval=5000
+
+# Common tokens list for all services
+trading.tokens=BTC_USDT,ETH_USDT
 
 # Debug settings for WebClient
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG
