--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ coincap.api.read.timeout=5000
 coincap.api.max.memory.size=16777216
 
 # Arbitrage settings
-arbitrage.threshold=1
+arbitrage.threshold=0.01
 arbitrage.check-interval=3000
 
 # Common tokens list for all services
@@ -39,3 +39,17 @@ trading.tokens=BTC_USDT,ETH_USDT
 # Debug settings for WebClient
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG
 logging.level.org.springframework.web.reactive.function.client.WebClient=DEBUG
+
+# Telegram Bot Configuration
+telegram.enabled=true
+telegram.bot.token=${TELEGRAM_BOT_TOKEN:7585664520:AAGnoYU_M8IhHf9T7LGSKZYjSFraNVF5byY}
+telegram.chat-id=${TELEGRAM_CHAT_ID:408673453}
+telegram.api.url=https://api.telegram.org/bot
+telegram.api.connection.timeout=3000
+telegram.api.read.timeout=5000
+
+# Telegram Rate Limiting settings
+telegram.retry.max-attempts=3
+telegram.retry.initial-backoff=1000
+telegram.retry.max-backoff=10000
+telegram.rate-limit.messages-per-minute=20
