--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ mexc.tokens=BTC_USDT,ETH_USDT
 # CoinMarketCap API settings
 coincap.api.url=https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest
 # Consider using environment variables instead of hardcoding the API key
-coincap.api.key=${COINMARKETCAP_API_KEY:f2ae9b07-9c80-43c0-8dc0-89e7e73f7ec1}
+coincap.api.key=${COINMARKETCAP_API_KEY}
 coincap.api.update-interval=10000
 
 # CoinMarketCap API Rate Limiting settings
@@ -42,8 +42,8 @@ logging.level.org.springframework.web.reactive.function.client.WebClient=DEBUG
 
 # Telegram Bot Configuration
 telegram.enabled=true
-telegram.bot.token=${TELEGRAM_BOT_TOKEN:7585664520:AAGnoYU_M8IhHf9T7LGSKZYjSFraNVF5byY}
-telegram.chat-id=${TELEGRAM_CHAT_ID:408673453}
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+telegram.chat-id=${TELEGRAM_CHAT_ID}
 telegram.api.url=https://api.telegram.org/bot
 telegram.api.connection.timeout=3000
 telegram.api.read.timeout=5000
