--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.trader.arbitrage=INFO
 
 # MEXC WebSocket settings
 mexc.wsUrl=wss://contract.mexc.com/edge
-mexc.tokens=BTC_USDT,ETH_USDT
+#mexc.tokens=BTC_USDT,ETH_USDT
 
 # CoinMarketCap API settings
 coincap.api.url=https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest
@@ -30,11 +30,11 @@ coincap.api.read.timeout=5000
 coincap.api.max.memory.size=16777216
 
 # Arbitrage settings
-arbitrage.threshold=1
+arbitrage.threshold=1.2
 arbitrage.check-interval=3000
 
 # Common tokens list for all services
-trading.tokens=BTC_USDT,ETH_USDT
+trading.tokens=FHE_USDT,RFC_USDT
 
 # Debug settings for WebClient
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG
@@ -52,4 +52,4 @@ telegram.api.read.timeout=5000
 telegram.retry.max-attempts=3
 telegram.retry.initial-backoff=1000
 telegram.retry.max-backoff=10000
-telegram.rate-limit.messages-per-minute=20
+telegram.rate-limit.messages-per-minute=5
