--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ arbitrage.threshold=1.2
 arbitrage.check-interval=3000
 
 # Common tokens list for all services
-trading.tokens=FHE_USDT,RFC_USDT
+trading.tokens=RFC_USDT
 
 # Debug settings for WebClient
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=DEBUG
@@ -53,3 +53,17 @@ telegram.retry.max-attempts=3
 telegram.retry.initial-backoff=1000
 telegram.retry.max-backoff=10000
 telegram.rate-limit.messages-per-minute=5
+
+# DEXScreener API settings
+dexscreener.api.update-interval=10000
+
+# DEXScreener API Rate Limiting settings
+dexscreener.api.max-attempts=3
+dexscreener.api.initial-backoff=1000
+dexscreener.api.max-backoff=10000
+dexscreener.api.calls-per-minute=30
+
+# DEXScreener API Connection settings
+dexscreener.api.connection.timeout=3000
+dexscreener.api.read.timeout=5000
+dexscreener.api.max.memory.size=16777216
