prometheus and grafana added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ coincap.api.read.timeout=5000
 coincap.api.max.memory.size=16777216
 
 # Arbitrage settings
-arbitrage.threshold=1.2
+arbitrage.threshold=2.5
 arbitrage.check-interval=3000
 
 # Common tokens list for all services
@@ -67,3 +67,12 @@ dexscreener.api.calls-per-minute=30
 dexscreener.api.connection.timeout=3000
 dexscreener.api.read.timeout=5000
 dexscreener.api.max.memory.size=16777216
+
+# Expose all actuator endpoints
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+
+# Application metrics
+management.metrics.tags.application=${spring.application.name}
+management.metrics.export.prometheus.enabled=true
