--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,26 @@ services:
     depends_on:
       - prometheus
 
+  zipkin:
+    image: openzipkin/zipkin:latest
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+    environment:
+      - STORAGE_TYPE=mem
+      # Увеличиваем лимиты памяти
+      - JAVA_OPTS=-Xms512m -Xmx512m
+
+  elasticsearch:
+      image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+      container_name: elasticsearch
+      environment:
+        - discovery.type=single-node
+        - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      ports:
+        - "9200:9200"
+      volumes:
+        - elasticsearch-data:/usr/share/elasticsearch/data
 volumes:
   grafana-storage:
+  elasticsearch-data:
