more metrics added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring application settings
-spring.application.name=mexc-websocket-client
+spring.application.name=arbitrage_trader
 
 # Server settings
 #server.port=8080
