working with clickhouse

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Spring application settings
 spring.application.name=arbitrage_trader
+spring.main.web-application-type=reactive
+
 
 # Server settings
 #server.port=8080
