--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,30 @@ services:
         - "9200:9200"
       volumes:
         - elasticsearch-data:/usr/share/elasticsearch/data
+
+  clickhouse:
+    image: clickhouse/clickhouse-server:latest
+    container_name: clickhouse
+    ports:
+      - "8123:8123"
+      - "9000:9000"
+    volumes:
+      - clickhouse_data:/var/lib/clickhouse
+    environment:
+      - CLICKHOUSE_DB=arbitrage
+      - CLICKHOUSE_USER=default
+      - CLICKHOUSE_PASSWORD=default
+      - CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT=1
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 262144
+        hard: 262144
+    command: >
+      bash -c "sed -i 's#<!-- <listen_host>::</listen_host> -->#<listen_host>::</listen_host>#' /etc/clickhouse-server/config.xml && /entrypoint.sh"
+
+
 volumes:
   grafana-storage:
   elasticsearch-data:
+  clickhouse_data:
