--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,11 @@ management:
         exposure:
           include: health,info,prometheus,metrics
 
+clickhouse:
+  url: "jdbc:clickhouse://host.docker.internal:9000/arbitrage"
+  user: default
+  password: default
+
 zipkin:
     tracing:
       endpoint: http://localhost:9411/api/v2/spans
