--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,22 +56,14 @@ services:
 
   clickhouse:
     image: clickhouse/clickhouse-server:latest
-    container_name: clickhouse
     ports:
-      - "8123:8123"
-      - "9000:9000"
-    volumes:
-      - clickhouse_data:/var/lib/clickhouse
+      - "8123:8123"  # HTTP-порт
+      - "9000:9000"  # TCP-порт для JDBC
     environment:
-      - CLICKHOUSE_DB=arbitrage
       - CLICKHOUSE_USER=default
       - CLICKHOUSE_PASSWORD=default
-      - CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT=1
-    ulimits:
-      nproc: 65535
-      nofile:
-        soft: 262144
-        hard: 262144
+    volumes:
+      - clickhouse_data:/var/lib/clickhouse
     command: >
       bash -c "sed -i 's#<!-- <listen_host>::</listen_host> -->#<listen_host>::</listen_host>#' /etc/clickhouse-server/config.xml && /entrypoint.sh"
 
