--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ management:
     endpoints:
       web:
         exposure:
-          include: health,info,prometheus,metrics
+          include: health,info,prometheus,metrics,beans
 
 clickhouse:
   url: "jdbc:clickhouse://host.docker.internal:9000/arbitrage"
