--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
   zipkin:
     image: openzipkin/zipkin:latest
     container_name: zipkin
+    restart: always
     ports:
       - "9411:9411"
     environment:
@@ -46,6 +47,7 @@ services:
   elasticsearch:
       image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
       container_name: elasticsearch
+      restart: always
       environment:
         - discovery.type=single-node
         - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
