--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.main.web-application-type=reactive
 #server.port=8080
 
 # Logging settings
-logging.level.trader.arbitrage=INFO
-#logging.level.trader.arbitrage=DEBUG
+#logging.level.trader.arbitrage=INFO
+logging.level.trader.arbitrage=DEBUG
 
 # MEXC WebSocket settings
 mexc.wsUrl=wss://contract.mexc.com/edge
