--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.main.web-application-type=reactive
 # Logging settings
 logging.level.trader.arbitrage=INFO
 #logging.level.trader.arbitrage=DEBUG
+logging.level.trader.arbitrage.client.SolanaClient=DEBUG
+logging.level.org.p2p.solanaj=WARN
 
 # MEXC WebSocket settings
 mexc.wsUrl=wss://contract.mexc.com/edge
@@ -34,6 +36,12 @@ coincap.api.max.memory.size=16777216
 # Arbitrage settings
 arbitrage.threshold=2
 arbitrage.check-interval=3000
+
+# Solana RPC Configuration
+# Solana
+solana.rpc-url=https://api.mainnet-beta.solana.com
+solana.update-interval=5000
+serum.market.rfc-usdt=6p6xgHyF7AeE6TZkSmFsko444wqoP15icUSqi2jfGiPN
 
 # Common tokens list for all services
 trading.tokens=RFC_USDT
